7696 - Fixed bottom panel contrast issues

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -72,3 +72,11 @@
     color: #7AD02F;
     text-decoration: underline;
 }
+
+.arches-signin .panel-footer {
+    color: #494949;
+}
+
+.arches-signin .panel-footer a {
+    color: #2c5271;
+}
